# digger

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ETHICS.md  README.md  REPO_SETTINGS.md  RESEARCH-competitors.md  SECURITY.md  ci-workflow-audit.html  collectors.html  compliance.html  cron-audit.html  decepticon-counter.html  detectors.html  diff.html  docs.js  docs.sh  evidence-store.html  extending.html  fips.html  genrule.html  getting-started.html  git-hooks.html  host-scan-report.html  index.html  install-hooks.sh  intel.html  loki.html  macos-launchd.html  macos-tcc.html  mcp.html  memory.html  opsec.html  pyproject.toml  sample-diff.html  sample-hunts.html  soc2.html  sync-gh-pages.sh  systemd-audit.html  (+1 more)
digger/: __init__.py  __main__.py  cli.py
docs/: _build_sample_report.py  ai-triage.html  android.html  architecture.html  browser-ext-perms.html  browser-scanner.html  chromium-unpatched.html  cli.html  decepticon-counter.html  detectors.html  docs.js  ethics.html  exchange.html  firewall-audit.html  forensics-grade.html  gotchas.html  highlight.js  hunts.html  idp.html  index.html  pqc.html  sample-report.html  shell-profile-audit.html  sigma.html  slsa.html  style.css  vscode.html  windows-registry-audit.html
tests/: test_ad_attacks.py  test_android.py  test_anti_forensics.py  test_art_harness.py  test_attacker_tooling.py  test_browser_ext_perms.py  test_browser_extended.py  test_browser_serviceworker.py  test_browser_telemetry_jammer.py  test_c2_modern.py  test_chromium_unpatched.py  test_ci_workflow_audit.py  test_cloud_attacks.py  test_coc.py  (+70 more)
(+273 files in other folders)
